  [Michele Simionato]
  * Fixed the check on dependent calculations
  * Specifying at the same time both a grid and individual sites is an error

  [Daniele Viganò]
  * Introduced support for RHEL/CentOS 8

  [Michele Simionato]
  * Added a check for no GMFs in event_based_risk
  * Avoided transferring the site collection
  * Storing the sources in TOML format

python3-oq-engine (3.7.0-1~xenial01) xenial; urgency=low

  [Michele Simionato]
  * Hiding calculations that fail before the pre-execute phase (for instance,
    because of missing files); they already give a clear error
  * Added an early check on truncation_level in presence of correlation model

  [Guillaume Daniel]
  * Implemented Ameri (2017) GMPE

  [Michele Simionato]
  * Changed the ruptures CSV exporter to use commas instead of tabs
  * Added a check forbidding `aggregate_by` for non-ebrisk calculators
  * Introduced a task queue
  * Removed the `cache_XXX.hdf5` files by using the SWMR mode of h5py

  [Kris Vanneste]
  * Updated the coefficients table for the atkinson_2015 to the actual
    values in the paper.

  [Michele Simionato]
  * Added an `/extract/agg_curves` API to extract both absolute and relative
    loss curves from an ebrisk calculation
  * Changed `oq reset --yes` to remove oqdata/user only in single-user mode
  * Now the engine automatically sorts the user-provided intensity_measure_types
  * Optimized the aggregation by tag
  * Fixed a bug with the binning when disaggregating around the date line
  * Fixed a prefiltering bug with complex fault sources: in some cases, blocks
    ruptures were incorrectly discarded
  * Changed the sampling algorithm for the GMPE logic trees: now it does
    not require building the full tree in memory
  * Raised clear errors for geometry files without quotes or with the wrong
    header in the multi_risk calculator
  * Changed the realizations.csv exporter to export '[FromShakeMap]' instead
    of '[FromFile]' when needed